# making-better-mistakes

./: .gitignore  pyproject.toml
better_mistakes/model/: performance.py  run_nn.py  run_xent.py
scripts/: download_imagenet.sh  download_inaturalist.sh
