[project]
name = "better-mistakes"
authors = [
    {name = "Luca Bertinetto"},
    {name = "Romain Mueller"},
    {name = "Konstantinos Tertikas"},
    {name = "Sina Samangooei"},
    {name = "Nicholas A. Lord"},
]
requires-python = ">=3.10"
version = "0.1.0"

[tool.setuptools]
packages = ["better_mistakes"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 160

[tool.ruff]
line-length = 160
